# solana-trade-bot

./: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
migrations/: 1_initial_schema.sql  20231010000000_initial_schema.sql 
src/: commands.rs  db.rs  lib.rs  main.rs  model.rs  qrcodeutils.rs  raydium.rs  utils.rs
src/commands/: balance.rs  callback.rs  help.rs  limit_order.rs  menu.rs  mod.rs  price.rs  send.rs  settings.rs  start.rs  swap.rs  trade.rs  ui.rs  wallet.rs  watchlist.rs  withdraw.rs
src/di/: container.rs  mod.rs
src/entity/: bot_error.rs  limit_order.rs  mod.rs  state.rs  swap.rs  swap_result.rs  token.rs  token_balance.rs  token_price.rs  trade.rs  transaction.rs  user.rs  watchlist.rs
src/interactor/: balance_interactor.rs  db.rs  limit_order_interactor.rs  mod.rs  price_interactor.rs  send_interactor.rs  settings_interactor.rs  swap_interactor.rs  trade_interactor.rs  wallet_interactor.rs  watchlist_interactor.rs  withdraw_interactor.rs
src/presenter/: balance_presenter.rs  limit_order_presenter.rs  mod.rs  price_presenter.rs  send_presenter.rs  settings_presenter.rs  swap_presenter.rs  trade_presenter.rs  wallet_presenter.rs  watchlist_presenter.rs  withdraw_presenter.rs
src/router/: mod.rs
src/services/: limit_order_service.rs  mod.rs
src/solana/: client.rs  mod.rs  utils.rs  wallet.rs
src/solana/jupiter/: config.rs  jupiter.rs  mod.rs  models.rs  price_service.rs  quote_service.rs  route_service.rs  swap_service.rs  token.rs  token_repository.rs  token_service.rs
src/solana/tokens/: constants.rs  mod.rs  native.rs  spl.rs  transaction.rs
src/view/: balance_view.rs  limit_order_view.rs  mod.rs  price_view.rs  send_view.rs  settings_view.rs  swap_view.rs  trade_view.rs  wallet_view.rs  watchlist_view.rs  withdraw_view.rs
